--- a/frontend/src/app/components/module7/ParentalInvolvement.module.css
+++ b/frontend/src/app/components/module7/ParentalInvolvement.module.css
@@ -13,7 +13,6 @@
   font-weight: 400;
   line-height: 150%;
   letter-spacing: 0.64px;
-  margin-bottom: 40px;
   text-align: center;
   width: 100%;
   max-width: 1000px;
